--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
         "@coreui/coreui": "3.2.0",
         "@coreui/react": "3.0.2",
         "@date-io/date-fns": "^1.3.13",
+        "@emotion/react": "^11.13.5",
+        "@emotion/styled": "^11.13.5",
         "@material-ui/core": "^4.12.4",
         "@material-ui/data-grid": "^4.0.0-alpha.6",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.61",
         "@material-ui/pickers": "^3.2.10",
         "@material-ui/styles": "^4.10.0",
+        "@mui/material": "^6.1.8",
         "@react-icons/all-files": "^4.1.0",
         "@react-pdf/renderer": "^2.1.1",
         "@testing-library/jest-dom": "^4.2.4",
@@ -73,6 +76,7 @@
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.4.1",
+        "sass": "^1.81.0",
         "styled-components": "^5.3.5",
         "yup": "^0.32.11"
     },
@@ -98,7 +102,6 @@
         ]
     },
     "devDependencies": {
-        "node-sass": "^4.14.1",
         "sass-vars-to-js-loader": "^2.1.1"
     }
 }
